Added Icon, fixed pathnames in css

--- a/stylesheets/jquery-ui-1.9.2.custom.css
+++ b/stylesheets/jquery-ui-1.9.2.custom.css
@@ -261,14 +261,14 @@ body .ui-tooltip { border-width: 2px; }
 ----------------------------------*/
 
 /* states and images */
-.ui-icon { width: 16px; height: 16px; background-image: url("/demos/work-procedure/images/ui-icons_444444_256x240.png"); }
-.ui-widget-content .ui-icon {background-image: url("/demos/work-procedure/images/ui-icons_444444_256x240.png"); }
-.ui-widget-header .ui-icon {background-image: url("/demos/work-procedure/images/ui-icons_444444_256x240.png"); }
-.ui-state-default .ui-icon { background-image: url("/demos/work-procedure/images/ui-icons_777777_256x240.png"); }
-.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url("/demos/work-procedure/images/ui-icons_555555_256x240.png"); }
-.ui-state-active .ui-icon {background-image: url("/demos/work-procedure/images/ui-icons_ffffff_256x240.png"); }
-.ui-state-highlight .ui-icon {background-image: url("/demos/work-procedure/images/ui-icons_777620_256x240.png"); }
-.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url("/demos/work-procedure/images/ui-icons_cc0000_256x240.png"); }
+.ui-icon { width: 16px; height: 16px; background-image: url("./../images/ui-icons_444444_256x240.png"); }
+.ui-widget-content .ui-icon {background-image: url("./../images/ui-icons_444444_256x240.png"); }
+.ui-widget-header .ui-icon {background-image: url("./../images/ui-icons_444444_256x240.png"); }
+.ui-state-default .ui-icon { background-image: url("./../images/ui-icons_777777_256x240.png"); }
+.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url("./../images/ui-icons_555555_256x240.png"); }
+.ui-state-active .ui-icon {background-image: url("./../images/ui-icons_ffffff_256x240.png"); }
+.ui-state-highlight .ui-icon {background-image: url("./../images/ui-icons_777620_256x240.png"); }
+.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url("./../images/ui-icons_cc0000_256x240.png"); }
 
 /* positioning */
 .ui-icon-carat-1-n { background-position: 0 0; }
